[package]
name = "podnum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "io-util"] }
omnipaxos = { git = "https://github.com/haraldng/omnipaxos", features = ["serde", "macros", "logging"] }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos" }
clap = { version = "4.4.7", features = ["derive"] }
sled = "0.34.7"
commitlog = "0.2.0"
serde = { version = "1.0.192", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
serde_json = "1.0.108"
